tests/frontend/fail/cast.act
contract B

contract A

constructor
interface constructor(uint w1)

iff
    CALLVALUE == 0

creates
    uint w := w1

constructor
interface constructor(uint z1)

iff
    CALLVALUE == 0

creates
    uint z := z1


contract C

constructor
interface constructor(address<A> a1, address<B> a2)

iff
    CALLVALUE == 0

creates
    A a := a1
    B b := a2


contract D

constructor
interface constructor(address<A> a1, address a2)

iff
    CALLVALUE == 0    

creates
    C c1 := create C(a1, a2)
